--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Vue Deploy
 on:
   push:
     branches:
-      - master
+      - main
  
 jobs:
   build-and-deploy:
@@ -27,5 +27,5 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.PAT }}  # 此处修改为你的Secret名称
+          github_token: chenyomi  # 此处修改为你的Secret名称
           publish_dir: ./dist
