--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "prismjs": "^1.29.0",
     "roboto-fontface": "^0.10.0",
     "sass": "^1.59.3",
+    "three": "^0.158.0",
+    "three-js-csg": "^72.0.0",
     "unplugin-vue-define-options": "^1.3.5",
     "vue": "^3.3.4",
     "vue-chartjs": "^5.2.0",
@@ -35,10 +37,9 @@
     "vue-router": "^4.2.1",
     "vue3-apexcharts": "^1.4.1",
     "vue3-perfect-scrollbar": "^1.6.0",
+    "vuedraggable": "^4.1.0",
     "vuetify": "^3.3.1",
-    "webfontloader": "^1.6.28",
-    "three": "^0.158.0",
-    "three-js-csg": "^72.0.0"
+    "webfontloader": "^1.6.28"
   },
   "devDependencies": {
     "@antfu/eslint-config-vue": "^0.39.1",
