--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "sneat-vuetify-vuejs-admin-template",
+  "name": "vue3-vuetify",
+  "author": "chenyomi",
   "version": "1.0.0",
   "private": true,
   "scripts": {
