--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "1.4.0",
     "axios-mock-adapter": "^1.21.4",
     "chart.js": "^4.1.2",
+    "default-passive-events": "^2.0.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
