--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
+    "dev": "vite --mode development",
+    "build": "vite build --mode production",
     "preview": "vite preview --port 5050",
     "lint": "eslint . -c .eslintrc.js --fix --ext .ts,.js,.vue,.tsx,.jsx",
     "build:icons": "node src/@iconify/build-icons.js",
@@ -17,10 +17,8 @@
     "@floating-ui/dom": "1.2.8",
     "@vueuse/core": "^10.1.2",
     "@vueuse/math": "^10.1.2",
-    "apexcharts-clevision": "^3.28.5",
     "axios": "1.4.0",
     "axios-mock-adapter": "^1.21.4",
-    "chart.js": "^4.1.2",
     "eslint-import-resolver-alias": "^1.1.2",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
@@ -32,7 +30,6 @@
     "three-js-csg": "^72.0.0",
     "unplugin-vue-define-options": "^1.3.5",
     "vue": "^3.3.4",
-    "vue-chartjs": "^5.2.0",
     "vue-flatpickr-component": "11.0.3",
     "vue-i18n": "^9.2.2",
     "vue-prism-component": "^2.0.0",
