--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@floating-ui/dom": "1.2.8",
     "@vueuse/core": "^10.1.2",
     "@vueuse/math": "^10.1.2",
+    "apexcharts-clevision": "^3.28.5",
     "axios": "1.4.0",
     "axios-mock-adapter": "^1.21.4",
     "eslint-import-resolver-alias": "^1.1.2",
