--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vue3-vuetify",
   "author": "chenyomi",
-  "version": "1.1.1",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "vite --mode development",
@@ -23,6 +23,7 @@
     "eslint-import-resolver-alias": "^1.1.2",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
+    "mqtt": "^5.3.4",
     "pinia": "^2.1.3",
     "prismjs": "^1.29.0",
     "roboto-fontface": "^0.10.0",
