--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,3 @@
 VITE_ENV=production
-VITE_API_URL=http://localhost:9090/
+VITE_API_URL=http://39.101.197.204:8080
+VITE_API_MQTT=ws://39.101.197.204:8083
