--- a/.editorconfig
+++ b/.editorconfig
@@ -8,7 +8,7 @@ root = true
 end_of_line = lf
 insert_final_newline = true
 
-# Matches multiple files with brace expansion notation
+# Matches multiple files with brace expansio
 # Set default charset
 [*.{js,py}]
 charset = utf-8
