--- a/.editorconfig
+++ b/.editorconfig
@@ -3,12 +3,12 @@
 # top-most EditorConfig file
 root = true
 
-# Unix-style newlines with a newline ending every file
+# Unix-style newlines with a newline ending every 
 [*]
 end_of_line = lf
 insert_final_newline = true
 
-# Matches multiple files with brace expansion notation
+# Matches multiple files with brace expansio
 # Set default charset
 [*.{js,py}]
 charset = utf-8
