--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
 VITE_ENV=production
-VITE_API_URL=http://39.101.197.204:8080
-VITE_API_MQTT=ws://39.101.197.204:8083
+VITE_API_URL=https://39.101.197.204:8080
+VITE_API_MQTT=wss://39.101.197.204:8083
