--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
 VITE_ENV=production
-VITE_API_URL=http://localhost:8080
-VITE_API_MQTT=ws://localhost:8083
+VITE_API_URL=https://3sw.asia
+VITE_API_MQTT=ws://3sw.asia
