--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
 VITE_ENV=production
-VITE_API_URL=https://3sw.asia
-VITE_API_MQTT=ws://3sw.asia
+VITE_API_URL=https://3sw.asia:8080
+VITE_API_MQTT=ws://3sw.asia:8083
